# form_factors

./: .gitignore  .gitmodules  AUTHORS  BUILD  CMakeLists.txt  LICENSE  README.md  ray_caster.cu  ray_caster.cuh  readme.txt  shaders  solution.sln  template.cu  template_vs2013.sln  template_vs2013.vcxproj
controller/: CMakeLists.txt  controller.cpp  controller.vcxproj
cpuFactorsCalculator/: CMakeLists.txt  cpuFactorsCalculator.vcxproj  cpu_system.cpp  cpu_system.h
cpuRayCaster/: CMakeLists.txt  cpu.cpp  cpu.h  cpuRayCaster.vcxproj  cpuRayCaster.vcxproj.filters  cpu_system.cpp  cpu_system.h  vec_math.cpp  vec_math.h
cpu_emission/: cpu_emission.vcxproj  cpu_system.cpp  cpu_system.h
cudaRayCaster/: CMakeLists.txt  cudaRayCaster.vcxproj  cuda_system.h  naive_system.cu  naive_system.cuh  system.cu  system.cuh  system.h
cuda_ray_caster/: CMakeLists.txt  cudaRayCaster.vcxproj  cuda_ray_caster.vcxproj  cuda_system.h  system.cu  system.cuh
doc/: contents-rus.md
emission/: CMakeLists.txt  emission.vcxproj  malley_cpu.cpp  malley_cpu.h  malley_emission.cpp  malley_emission.h  parallel_cpu.cpp  parallel_cpu.h  parallel_rays_cpu.cpp  parallel_rays_cpu.h  system.cpp  system.h
ext/gtest/msvc/: UpgradeLog.htm  gtest-md.sln  gtest-md.vcxproj  gtest_main-md.vcxproj  gtest_prod_test-md.vcxproj  gtest_unittest-md.vcxproj
form_factors/: CMakeLists.txt  form_factors.vcxproj  system.cpp  system.h
import_export/: CMakeLists.txt  csv_export.cpp  csv_export.h  import_export.vcxproj  obj_export.cpp  obj_export.h  obj_import.cpp  obj_import.h
math/: CMakeLists.txt  grid.cpp  grid.h  mat.cpp  mat.h  math.vcxproj  math.vcxproj.filters  operations.cpp  operations.h  ray.cpp  ray.h  three_way_compare.cpp  three_way_compare.h  triangle.cpp  triangle.h  types.h
models/: Aqua_13.mtl  aluminium.mtl  confetti_2k.frames  confetti_2k.task  confetti_2k_sun.task  confetti_2k_with_heater.task  grid_100x100_heat.task  grid_10x10_heat.task  parallel_planes.task  patch_sphere_20k_sun.task  patch_sphere_2k_sun.task  perpendicular_planes.task  test_material.mtl  tgrid_10x10.mtl  tgrid_10x10_heat.task
perfTest/: CMakeLists.txt  perfTest.cpp  perfTest.vcxproj  perfTest.vcxproj.filters
radiance_equation/: cpu_system.cpp  radiance_cpu.cpp  radiance_equation.vcxproj  radiance_equation.vcxproj.filters
ray_caster/: CMakeLists.txt  ReadMe.txt  cpu.cpp  cpu.h  math_types.h  naive_cpu.cpp  naive_cpu.h  ray_caster.vcxproj  ray_caster.vcxproj.filters  system.cpp  system.h  zgrid_cpu.cpp  zgrid_cpu.h
results/: parallel_planes.csv  perpendicular_planes.csv
runner/: AppContainer.cpp  AppContainer.h  CubeGenerator.cpp  CubeGenerator.h  Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  TaskParser.cpp  TaskParser.h  TempScaleRectModel.cpp  TempScaleRectModel.h  Timeline.cpp  Timeline.h  TimelineRectModel.cpp  TimelineRectModel.h  main.cpp  proj_defs.h  runner.vcxproj  runner.vcxproj.filters  sdl_logger.cpp  sdl_logger.h
sb_ff_te/: cpu_system.cpp  cpu_system.h  sb_ff_te.vcxproj  sb_ff_te.vcxproj.filters
shaders/: fragRect.frag  fragRectPos.frag  mvp.vert  mvpRect.vert  simple.frag
subject/: CMakeLists.txt  cube_generator.cpp  generator.h  mesh_graph.cpp  objects.cpp  objects.h  spherial_generator.cpp  spherical_generator.h  subject.vcxproj  subject.vcxproj.filters  system.cpp  system.h  unify_normals.cpp
test/: CMakeLists.txt  adams_solution.cpp  conductive_solution.cpp  export.cpp  form_factors.cpp  grid.cpp  heat_source.cpp  import.cpp  main.cpp  math_matrix.cpp  math_ray.cpp  mesh_graph.cpp  radiance_solution.cpp  ray_casting.cpp  test.vcxproj  test.vcxproj.filters  triangle_math.cpp
thermal_equation/: CMakeLists.txt  conductive_cpu.cpp  conductive_cpu.h  factory.cpp  form_factors.cpp  form_factors.h  heat_source_cpu.cpp  heat_source_cpu.h  parallel_rays_cpu.cpp  parallel_rays_cpu.h  radiance_cpu.cpp  radiance_cpu.h  system.cpp  system.h  thermal_equation.vcxproj  thermal_equation.vcxproj.filters
thermal_solution/: CMakeLists.txt  cpu_adams.cpp  cpu_adams.h  system.cpp  system.h  thermal_solution.vcxproj  thermal_solution.vcxproj.filters
